# Celim_GLPI

./: .gitignore  .sample.env  Celim_GLPI-console V3.6 erro descrição e pendente uma vez no dia.spec  Celim_GLPI-console.spec  Celim_GLPI-noconsole V3.6 erro descrição e pendente uma vez no dia.spec  Celim_GLPI-noconsole.spec  Celim_GLPI.py  Celim_GLPI.spec  Celim_GLPI_20260331_stable_console.spec  Celim_GLPI_20260401_stable_console.spec  Celim_GLPI_Production.spec  DEBUG_GUIDE.md  GEMINI.md  README.md  database_adapter.py  pyproject.toml  requirements-full-V1.txt  requirements-full-V2.txt  requirements.txt  settings.py  teste.py  teste.xlsx
Config/: caminho_excel.txt
Config/Diretorios/: CaminhoProjeto.txt  RaizProjeto.txt
doc/plan horas/: Pasta1.xlsx  ~$Pasta1.xlsx
powerbi/: Dispositivos.sql  py segundos.py  py.py  sql_chamados.sql  sql_chamados_sem_convert.sql  tmp.py
tests/: test_table_renderer.py
utils/: glpi_scraper.py  table_renderer.py  web_driver_manager.py
