[project]
name = "celim-glpi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.0"
dependencies = [
    "dotenv>=0.9.9",
    "pydantic-settings>=2.13.1",
    "altgraph==0.17.3",
    "attrs>=23.1.0",
    "certifi==2023.5.7",
    "cffi>=2.0.0",
    "charset-normalizer>=3.1.0",
    "contourpy>=1.2.1",
    "cryptocode==0.1",
    "cycler==0.12.1",
    "EasyProcess==1.1",
    "entrypoint2==1.1",
    "et-xmlfile==1.1.0",
    "exceptiongroup==1.1.2",
    "Faker==24.4.0",
    "fonttools==4.43.1",
    "greenlet>=3.0.3",
    "h11==0.14.0",
    "idna==3.4",
    "importlib-resources==6.1.0",
    "kiwisolver==1.4.5",
    "mariadb>=1.1.14",
    "matplotlib>=3.9.0",
    "MouseInfo==0.1.3",
    "mss==9.0.1",
    "mysql-connector-python>=8.0.33",
    "mysqlclient>=2.2.7",
    "numpy>=2.4.4",
    "openpyxl>=3.1.2",
    "outcome==1.2.0",
    "packaging==23.2",
    "pandas>=3.0.1",
    "pefile==2023.2.7",
    "Pillow==9.5.0",
    "plotly==5.20.0",
    "protobuf==3.20.3",
    "PyAutoGUI==0.9.54",
    "pycparser==2.21",
    "pycryptodomex==3.18.0",
    "PyGetWindow==0.0.9",
    "pyinstaller>=6.11.0",
    "pyinstaller-hooks-contrib>=2025.0",
    "PyMsgBox==1.0.9",
    "pymysql>=1.1.2",
    "pyodbc==5.3.0",
    "pyparsing==3.1.1",
    "pyperclip==1.8.2",
    "PyRect==0.2.0",
    "pyscreenshot==3.1",
    "PyScreeze==0.1.29",
    "PySocks==1.7.1",
    "pyTelegramBotAPI==4.12.0",
    "python-dateutil==2.8.2",
    "pytweening==1.0.7",
    "pytz==2023.3",
    "pywin32-ctypes>=0.2.3",
    "requests==2.31.0",
    "selenium==4.10.0",
    "six==1.16.0",
    "sniffio==1.3.0",
    "sortedcontainers==2.4.0",
    "SQLAlchemy>=2.0.32",
    "tenacity==8.2.3",
    "trio==0.22.2",
    "trio-websocket==0.10.3",
    "typing-extensions==4.12.2",
    "tzdata==2023.3",
    "urllib3==2.0.3",
    "wsproto==1.2.0",
    "xlrd==2.0.1",
    "zipp==3.17.0",
    "webdriver-manager==4.0.1",
    "aiomysql>=0.3.2",
]
